--- a/smb.conf
+++ b/smb.conf
@@ -1,6 +1,6 @@
 [BAgi-space-tier-1]
   comment = "Tier 1 Storage - no backup policy at all"
-  path = "/external_drive_1/tier1"
+  path = "/internal_drive_2/tier1"
   browsable = yes
   guest ok = yes
   read only = no
@@ -8,7 +8,7 @@
 
 [BAgi-space-tier-2]
   comment = "Tier 2 Storage - tier 2 backup policy"
-  path = "/external_drive_1/tier2"
+  path = "/external_drive_2/tier2"
   browsable = yes
   guest ok = yes
   read only = no
@@ -16,7 +16,7 @@
 
 [BAgi-space-tier-3]
   comment = "Tier 3 Storage - tier 3 backup policy"
-  path = "/external_drive_1/tier3"
+  path = "/external_drive_2/tier3"
   browsable = yes
   guest ok = yes
   read only = no
