--- a/smb.conf
+++ b/smb.conf
@@ -21,3 +21,75 @@
   guest ok = yes
   read only = no
   create mask = 0755
+
+[BAgi-external-drive-1-tier-1]
+  comment = "No Storage - WD"
+  path = "/external_drive_1/tier1"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-external-drive-1-tier-2]
+  comment = "No Storage - WD"
+  path = "/external_drive_1/tier2"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-external-drive-1-tier-3]
+  comment = "No Storage - WD"
+  path = "/external_drive_1/tier3"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-external-drive-2-tier-1]
+  comment = "No Storage - INTENSO"
+  path = "/external_drive_2/tier1"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-external-drive-2-tier-2]
+  comment = "No Storage - INTENSO"
+  path = "/external_drive_2/tier2"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-external-drive-2-tier-3]
+  comment = "No Storage - INTENSO"
+  path = "/external_drive_2/tier3"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-2-tier-1]
+  comment = "No Storage - Seagate"
+  path = "/internal_drive_2/tier1"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-2-tier-2]
+  comment = "No Storage - Seagate"
+  path = "/internal_drive_2/tier2"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-2-tier-3]
+  comment = "No Storage - Seagate"
+  path = "/internal_drive_2/tier3"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
