--- a/smb.conf
+++ b/smb.conf
@@ -8,7 +8,7 @@
 
 [BAgi-space-tier-2]
   comment = "Tier 2 Storage - tier 2 backup policy"
-  path = "/external_drive_1/tier2"
+  path = "/internal_drive_2/tier2"
   browsable = yes
   guest ok = yes
   read only = no
@@ -16,7 +16,7 @@
 
 [BAgi-space-tier-3]
   comment = "Tier 3 Storage - tier 3 backup policy"
-  path = "/external_drive_1/tier3"
+  path = "/internal_drive_2/tier3"
   browsable = yes
   guest ok = yes
   read only = no
@@ -65,6 +65,30 @@
 [BAgi-external-drive-2-tier-3]
   comment = "No Storage - INTENSO"
   path = "/external_drive_2/tier3"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-1-tier-1]
+  comment = "No Storage - Samsung"
+  path = "/internal_drive_1/tier1"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-1-tier-2]
+  comment = "No Storage - Samsung"
+  path = "/internal_drive_1/tier2"
+  browsable = yes
+  guest ok = yes
+  read only = no
+  create mask = 0755
+
+[BAgi-internal-drive-1-tier-3]
+  comment = "No Storage - Samsung"
+  path = "/internal_drive_1/tier3"
   browsable = yes
   guest ok = yes
   read only = no
